fix study service
