# services/study-service/internal/db/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.26.0
+//   sqlc v1.30.0
 
 package db
 
@@ -99,6 +99,22 @@ func (ns NullSessionStatus) Value() (driver.Value, error) {
 		return nil, nil
 	}
 	return string(ns.SessionStatus), nil
+}
+
+type DeckStudySetting struct {
+	UserID                       uuid.UUID `json:"user_id"`
+	DeckID                       uuid.UUID `json:"deck_id"`
+	ShuffleTerms                 bool      `json:"shuffle_terms"`
+	TextToSpeech                 bool      `json:"text_to_speech"`
+	AnswerWithTerm               bool      `json:"answer_with_term"`
+	AnswerWithDefinition         bool      `json:"answer_with_definition"`
+	QuestionTypeFlashcards       bool      `json:"question_type_flashcards"`
+	QuestionTypeMultipleChoice   bool      `json:"question_type_multiple_choice"`
+	QuestionTypeWritten          bool      `json:"question_type_written"`
+	StrictnessLevel              string    `json:"strictness_level"`
+	RequireRetypingCorrectAnswer bool      `json:"require_retyping_correct_answer"`
+	CreatedAt                    time.Time `json:"created_at"`
+	UpdatedAt                    time.Time `json:"updated_at"`
 }
 
 type Revlog struct {
